main/new_content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </span>
                 </a>
             </div>
-            <div class="profilPicture"><img src="" alt="" style="width: 100%;"></div>  
+            <div class="profilPicture"><img src="./icone/Jeremy-PELAGE02.jpg" alt="image de Jeremy Pélage" style="width: 100%;"></div>  
         </header>
     </div>
     
@@ -101,6 +101,10 @@
                 <img class="icone" style="height: 48px;" src="icone/c-sharp-logo@logotyp.us.svg" alt="cs">
                 <img class="icone" src="icone/icons8-sql-48.png" alt="rust">
                 <img class="icone" src="icone/icons8-langage-de-programmation-rust-48.png" alt="rust">
+                <legend>Python, vue.js, et Django</legend>
+                <img class="icone" style="height: 47px;" src="icone/logos--python.png" alt="py">
+                <img class="icone" style="height: 47px;" src="icone/devicon--vuejs.png" alt="vuejs">
+                <img class="icone" style="height: 47px;" src="icone/skill-icons--django.png" alt="django">
             </div>
             <hr>
             <div class="savoir_faire">
