fix for impression

--- a/index.html
+++ b/index.html
@@ -38,23 +38,29 @@
     <div class="partie_gauche">
         <section class="experience">
             <h2>Expériences Professionnelles</h2>
-            <div class="experience_ligne">
+            <!-- <div class="experience_ligne">
                 <h3  >Chargé de communication</h3><h3  class="decalexperience">2017 - 2018</h3>
                 <i  >ESC Clermont, Clermont-Ferrand</i>
                 <li  >Rédaction liste partenaire et synthèse</li>
                 <li  >Organisation et pilotage des appels et mails pour trouver les partenaires</li>
+            </div> -->
+            <div class="experience_ligne" style="top: -0.5em;position: relative;">
+                <h3>Chargé de taches</h3><h3  class="decalexperience">2018 - 2018</h3>
+                <i>ESC Clermont, Clermont-Ferrand</i>
+                <li>Création d'un questionnaire pour l'expérience</li>
+                <li>Gestion d'ateliers et récupération des informations de suivi</li>
             </div>
-            <div class="experience_ligne">
-                <h3  >Chargé de taches</h3><h3  class="decalexperience">2018 - 2018</h3>
-                <i  >ESC Clermont, Clermont-Ferrand</i>
-                <li  >Création d'un questionnaire pour l'expérience</li>
-                <li  >Gestion d'ateliers et récupération des informations de suivi</li>
+            <div class="experience_ligne" style="top: -0.5em;position: relative;">
+                <h3>Assistant en Communication</h3><h3  class="decalexperience">2020 - 2020</h3>
+                <i>Délégation regionale EDF, Clermont-Ferrand</i>
+                <li>Création de document officiels confidentiels</li>
+                <li>Gestion en commun de l'espace de vie et du réapprovisionnement</li>
             </div>
-            <div class="experience_ligne">
-                <h3  >Assistant en Communication</h3><h3  class="decalexperience">2020 - 2020</h3>
-                <i  >Délégation regionale EDF, Clermont-Ferrand</i>
-                <li  >Création de document officiels confidentiels</li>
-                <li  >Gestion en commun de l'espace de vie et du réapprovisionnement</li>
+            <div class="experience_ligne" style="top: -0.5em;position: relative;">
+                <h3>Développement Full-Stack: Conception et Refonte</h3><h3  class="decalexperience" style="top: -0.7em;">2025 - 2025</h3>
+                <i>La ferme linguistique, Mesnil-Esnard</i>
+                <li>Création d'une page Statistique : Extraction de données en PHP pour leur exploitation dynamique en JavaScript (tableaux interactifs, graphiques via canvas, analyses statistiques).</li>
+                <li>Création d'une page de Communication : Optimisation de la gestion des données (récupération, modification dynamique) et implémentation du système d'envoi de mails.</li>
             </div>
         </section>
         <fieldset>
