--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="deplacement">
                 <span class="material-icons" style="font-size:15px; padding: 0 10px">email</span><i>jeremy.pelage@outlook.com</i>
                 <span class="material-icons" style="font-size:15px; padding: 0 10px">phone_enabled</span><i>06 95 45 88 72</i>
-                <a href="https://www.linkedin.com/in/jeremy-p%C3%A9lage-1b5417150/" style="color: black;">
+                <a href="https://www.linkedin.com/in/jeremy-pelage-1b5417150/" style="color: black;">
                     <svg width="25" height="25" viewBox="0 0 34 34" class="rangement_droit">
                         <path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5Z
                         M10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" 
@@ -82,10 +82,10 @@
                             <h3 >Classe préparatoire ECT <br>2015 - 2017</h3>
                             <i >Lycée les bruyères, Sotteville-les-rouen</i>
                         </div>
-                        <div class="formation_ligne item">
+                        <!-- <div class="formation_ligne item">
                             <h3 >Bac STMG Gestion-Finance<br>2014 - 2015</h3>
                             <i >Sacrée Coeur, Rouen</i>
-                        </div>
+                        </div> -->
                     
                 </section>
         </fieldset>
@@ -112,27 +112,40 @@
             <hr>
             <div class="savoir_faire">
                 <h2>Savoir-Faire</h2>
-                <li >Analyser des problèmes techniques</li>
-                <li >Déterminer des mesures correctives</li>
-                <li >Réaliser des supports techniques</li>
-                <li >Établir un cahier des charges</li>
-                <li >Planifier les étapes d'un projet</li>
-                <li >Présenter un produit fini à son commanditaire</li>
+                <!-- <li >Analyser des problèmes techniques</li>
+                <li>Déterminer des mesures correctives</li>
+                <li>Réaliser des supports techniques</li>
+                <li>Établir un cahier des charges</li>
+                <li>Planifier les étapes d'un projet</li> -->
+                <!-- <li>Présenter un produit fini à son commanditaire</li> -->
+                <li>Analyser et résoudre des bugs ou problèmes techniques complexes</li>
+                <li>Développer, tester et déployer des applications (Django, Vue.js, Docker)</li>
+                <li>Rédiger une documentation technique claire (API, guides utilisateurs)</li>
+                <li>Concevoir un cahier des charges adapté aux besoins techniques</li>
+                <li>Planifier les étapes d'un projet avec une approche Agile</li>
+                <li>Présenter des solutions techniques aux clients et équipes</li>
             </div>
             <hr>
             <div class="qualités">
                 <h2>Qualités</h2>
-                <li >Perfectionniste</li>
+                <!-- <li >Perfectionniste</li>
                 <li >Sérieux et concentré</li>
                 <li >Sociable</li>
-                <li >Autonome</li>
+                <li >Autonome</li> -->
+                <li>Rigueur et attention au détail</li>
+                <li>Autonomie et esprit d'initiative</li>
+                <li>Communication claire et efficace</li>
+                <li>Curiosité pour les nouvelles technologies</li>
             </div>
             <hr>
             <div class="centres_interet">
                 <h2>Centres d'intérêt</h2>
-                <li >Gastronomie</li>
+                <!-- <li >Gastronomie</li>
                 <li >L'informatique</li>
-                <li >Les voyages</li>
+                <li >Les voyages</li> -->
+                <li>Echec</li>
+                <li>Participation à des projets Open Source</li>
+                <li>Gastronomie et voyages</li>
             </div>
         </aside>
     </div>
